merge survey and upload